# bankID-auth-examples

./: .gitmodules  README.md
c++/backend/: CMakeLists.txt  SSL_SETUP.md  conanfile.txt  types.ts
c++/backend/bankid/: CMakeLists.txt  bankid.cpp  main.cpp
c++/backend/bankid/includes/: bankid.h
c++/backend/bankid/includes/api/: auth.h  other.payment.h  payment.h  phone.auth.h  responses.h  sign.h
c++/backend/bankid/includes/bankid/: bankid.h
c++/backend/bankid/includes/bankid/api/: cancel.h  collect.h  other.payment.h  payment.h  phone.sign.h
c++/backend/example_usage/: CMakeLists.txt
c++/backend/server/: CMakeLists.txt  exmaples.md  main.cpp
c++/backend/server/certs/: bankid_combined.pem
c++/backend/server/includes/: helper.h
c++/backend/server/scripts/: convert_certificates.bat  convert_certificates.sh
c++/backend/tests/: test_auth.cpp
c++/frontend/: .cta.json  index.html  package.json  tsconfig.json  vite.config.ts
c++/frontend/public/: manifest.json
c++/frontend/src/: env.ts  main.tsx  styles.css
c++/frontend/src/components/: BankIdModal.tsx
c++/frontend/src/components/ui/: button.tsx  spinner.tsx
c++/frontend/src/contexts/: UserContext.tsx
c++/frontend/src/hooks/: useAuthStateMachine.tsx  useTimeout.tsx
c++/frontend/src/lib/types/: auth.ts
c++/frontend/src/routes/: __root.tsx  index.tsx
c++/frontend/src/routes/auth/: index.tsx
c++/frontend/src/routes/demo/: index.tsx
nextjs/: README.md  next.config.ts  package.json
nextjs/public/: manifest.json
nextjs/src/: middleware.ts
nextjs/src/app/: globals.css  layout.tsx  page.tsx
nextjs/src/app/api/auth/init/: route.ts
nextjs/src/app/api/auth/poll/: route.ts
nextjs/src/app/auth/: page.tsx
nextjs/src/components/: BankIdModal.tsx  QueryProvider.tsx
nextjs/src/contexts/: UserContext.tsx
nextjs/src/hooks/: useAuthStateMachine.tsx  useTimeout.tsx
nextjs/src/lib/: bankid.ts  pc.ts
nextjs/src/lib/types/: auth.ts  service.ts
nextjs/src/server/: env.ts
nextjs/src/server/actions/auth/: auth.input.ts  auth.service.ts
nextjs/src/server/lib/: bankid.ts
